--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -51,6 +51,11 @@
         <item name="android:layout_marginEnd">16dp</item>
     </style>
 
+    <style name="Responsive24dp">
+        <item name="android:layout_marginStart">24dp</item>
+        <item name="android:layout_marginEnd">24dp</item>
+    </style>
+
     <style name="TextSplash">
         <item name="android:textColor">@color/font_default</item>
         <item name="android:fontFamily">@font/roboto</item>
