--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/beranda"
+        android:id="@+id/home"
         android:title="Beranda"
         android:icon="@drawable/bottom_navbar_home_selector"
         />
     <item
-        android:id="@+id/cari"
+        android:id="@+id/search"
         android:title="Cari"
         android:icon="@drawable/bottom_navbar_search_selector" />
 
     <item
-        android:id="@+id/pesanan"
+        android:id="@+id/transactions"
         android:title="Pesanan"
         android:icon="@drawable/bottom_navbar_order_selector" />
 
     <item
-        android:id="@+id/akun"
+        android:id="@+id/profile"
         android:title="Akun"
         android:icon="@drawable/bottom_navbar_profile_selector" />
 
