--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.detail.DetailActivity">
+    tools:context=".ui.dashboard.transactions.detailTransaction.DetailActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
