--- a/app/src/main/res/layout/fragment_diproses.xml
+++ b/app/src/main/res/layout/fragment_diproses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.detail.diproses.DiprosesFragment"
+    tools:context=".ui.dashboard.transactions.detailTransaction.diproses.DiprosesFragment"
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
