--- a/app/src/main/res/layout/fragment_selesai.xml
+++ b/app/src/main/res/layout/fragment_selesai.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context=".ui.detail.selesai.SelesaiFragment"
+    tools:context=".ui.dashboard.transactions.detailTransaction.selesai.SelesaiFragment"
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
