--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="font_splash">#979797</color>
     <color name="font_landing">#7D7D7D</color>
     <color name="lines">#707070</color>
-    <color name="colorLine">#E4E4E4</color>
+    <color name="colorLine">#BDBDBD</color>
     <color name="colorLine8">#E8E8E8</color>
     <color name="font_default">#606060</color>
     <color name="font_text_input_layout">#3F51B5</color>
@@ -33,6 +33,8 @@
     <color name="btnDefault">#ACACAC</color>
     <color name="bgNotification">#E2F4FF</color>
     <color name="fontStory">#808080</color>
+    <color name="bgChatNotif">#E3EEF5</color>
+    <color name="bgPrice">#CBE2F1</color>
 
 
     <color name="placeholder">#6FB6B6B6</color>
