--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    tools:context="ui.listmitra.detailshop.DetailShopFragment"
+    tools:context=".ui.listmitra.listshop.detailshop.DetailShopFragment"
     tools:ignore="MissingDefaultResource">
 
     <ScrollView
