--- a/app/src/main/res/layout/fragment_list_chat_room.xml
+++ b/app/src/main/res/layout/fragment_list_chat_room.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorBackground"
-    tools:context=".ui.chat.listchatroom.ListChatRoomFragment"
+    tools:context=".ui.dashboard.home.chat.listchatroom.ListChatRoomFragment"
     tools:ignore="MissingDefaultResource">
 
     <LinearLayout
